force-app/main/default/objects/Elimination__c/Elimination__c.object-meta.xml
<CustomObject>
    <label>Elimination</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Elimination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eliminations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>