force-app/main/default/objects/Elimination__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Eliminations</relationshipLabel>
    <relationshipName>Eliminations</relationshipName>
    <type>Lookup</type>
</CustomField>