force-app/main/default/objects/Elimination__c/fields/Elimination_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Elimination_Current_Status__c</fullName>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cathrization</fullName>
            </value>
            <value>
                <fullName>Cloth diapers</fullName>
            </value>
            <value>
                <fullName>Colostomy</fullName>
            </value>
            <value>
                <fullName>Disposable diapers</fullName>
            </value>
            <value>
                <fullName>Disposable Undergraments</fullName>
            </value>
            <value>
                <fullName>Either cloth or disposable diapers</fullName>
            </value>
            <value>
                <fullName>Encopresis</fullName>
            </value>
            <value>
                <fullName>Enema</fullName>
            </value>
            <value>
                <fullName>Enuresis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pull-Ups diapers</fullName>
            </value>
            <value>
                <fullName>Rubber pants</fullName>
            </value>
            <value>
                <fullName>Toilet trained</fullName>
            </value>
            <value>
                <fullName>Training pants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>