force-app/main/default/objects/Elimination__c/fields/Elimination_Info_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Elimination_Info_Provider_Name__c</fullName>
    <label>Info Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>