force-app/main/default/objects/Elimination__c/fields/Elimination_Info_Unknown__c.field-meta.xml
<CustomField>
    <fullName>Elimination_Info_Unknown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elimination Info Unknown</label>
    <type>Checkbox</type>
</CustomField>