force-app/main/default/objects/Elimination__c/fields/Elimination_Special_Consideration_Cmts__c.field-meta.xml
<CustomField>
    <fullName>Elimination_Special_Consideration_Cmts__c</fullName>
    <label>Special Consideration Comments</label>
    <type>TextArea</type>
</CustomField>