force-app/main/default/objects/Elimination__c/fields/Elimination_Toilet_Training_Comments__c.field-meta.xml
<CustomField>
    <fullName>Elimination_Toilet_Training_Comments__c</fullName>
    <label>Toilet Training Comments</label>
    <type>TextArea</type>
</CustomField>