force-app/main/default/objects/Elimination__c/fields/Elimination_Toilet_Training_Method__c.field-meta.xml
<CustomField>
    <fullName>Elimination_Toilet_Training_Method__c</fullName>
    <label>Toilet Training Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
            <value>
                <fullName>Pottie</fullName>
            </value>
            <value>
                <fullName>Regular Toilet Seat</fullName>
            </value>
            <value>
                <fullName>Toilet Seat Attachment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>