force-app/main/default/objects/Elimination__c/fields/Elimination_Word_for_Bowel_Movement__c.field-meta.xml
<CustomField>
    <fullName>Elimination_Word_for_Bowel_Movement__c</fullName>
    <label>Word for Bowel Movement</label>
    <type>TextArea</type>
</CustomField>