force-app/main/default/objects/Elimination__c/fields/Elimination_Word_for_Urination__c.field-meta.xml
<CustomField>
    <fullName>Elimination_Word_for_Urination__c</fullName>
    <label>Word for Urination</label>
    <type>TextArea</type>
</CustomField>