force-app/main/default/objects/Elimination__c/fields/Special_Consideration_Comments__c.field-meta.xml
<CustomField>
    <fullName>Special_Consideration_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Consideration Comments</label>
    <type>Checkbox</type>
</CustomField>